[ENG-2335] fix: align text to right in authentication section (#1147)
* fix: align text to right in authentication section

* fix: capitalize status in authentication section

---------

--- a/src/components/Configure/content/manage/authenticate.module.css
+++ b/src/components/Configure/content/manage/authenticate.module.css
@@ -11,5 +11,6 @@
 
 .value {
     color: var(--amp-colors-text-regular);
+    text-align: right;
 }
 
